packages/typ/tests/fixtures/diagnostics/0159_adt_record_update_int_field_04.ml.expected
File "0159_adt_record_update_int_field_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0159_adt_record_update_int_field_04 is not a valid module name.

File "0159_adt_record_update_int_field_04.ml", line 3, characters 34-38:
3 | let _ = { base_delta with value = true }
                                      ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
